tests/neg/i18533/Cat_SCALA_ONLY.java
package i18533;

public class Cat extends Pet {

}
